--- a/projects/movie-search.html
+++ b/projects/movie-search.html
@@ -6,7 +6,7 @@
   <title>Movie Search</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 
 
@@ -22,8 +22,8 @@
       
       --radius: 12px;
       --shadow: 0 20px 40px -10px rgba(0,0,0,0.5);
-      --font-sans: 'Manrope', sans-serif;
-      --font-serif: 'Playfair Display', serif;
+      --font-sans: 'Inter', sans-serif;
+      --font-serif: 'Inter', sans-serif;
     }
 
     * { margin: 0; padding: 0; box-sizing: border-box; }
