--- a/works.html
+++ b/works.html
@@ -715,6 +715,7 @@
               <div class="proj-cat">Social &amp; Fun</div>
               <h2 class="proj-title">Soul<em>Sync</em></h2>
               <p class="proj-desc">Interactive love compatibility calculator with polished UI and instant results.</p>
+              <div class="proj-warning" style="background: #ff3333; color: #fff; padding: 10px 12px; border-radius: 6px; font-size: 13px; font-weight: 600; margin: 12px 0; display: flex; align-items: center; gap: 8px;"><span style="font-size: 16px;">⚠️</span> <span>PRANK ALERT: This is a joke website, so be ready for a jumpscare!</span></div>
               <div class="proj-tags">
                 <span class="proj-tag">Interactive</span>
                 <span class="proj-tag">DOM Logic</span>
@@ -736,7 +737,7 @@
             <div class="work-meta">
               <div class="proj-num">06 / 12</div>
               <div class="proj-cat">Logic Engine</div>
-              <h2 class="proj-title">Interactive <em>Quiz</em></h2>
+              <h2 class="proj-title">Tanvir.<em>Quiz</em></h2>
               <p class="proj-desc">Quiz platform with local storage, countdown timers, and real-time scoring.</p>
               <div class="proj-tags">
                 <span class="proj-tag">ES6+</span>
