--- a/projects/note.html
+++ b/projects/note.html
@@ -18,6 +18,18 @@
       --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.05), 0 4px 6px -2px rgba(0, 0, 0, 0.025);
     }
 
+    html {
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+      overflow: hidden;
+    }
+
+    html::-webkit-scrollbar {
+      display: none;
+      width: 0;
+      background: transparent;
+    }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       background-color: var(--bg-body);
@@ -28,6 +40,14 @@
       padding: 60px 20px;
       min-height: 100vh;
       -webkit-font-smoothing: antialiased;
+      overflow-y: auto;
+      height: 100vh;
+    }
+
+    body::-webkit-scrollbar {
+      display: none;
+      width: 0;
+      background: transparent;
     }
 
     .document-card {
@@ -64,6 +84,9 @@
       line-height: 1.2;
       padding-bottom: 24px;
       border-bottom: 1px solid var(--border-subtle);
+      word-wrap: break-word;
+      word-break: break-word;
+      overflow-wrap: break-word;
     }
 
     .content {
@@ -71,6 +94,10 @@
       color: var(--text-body);
       line-height: 1.75;
       white-space: pre-wrap;
+      word-wrap: break-word;
+      word-break: break-word;
+      overflow-wrap: break-word;
+      padding: 0;
     }
 
     @media (max-width: 768px) {
@@ -108,7 +135,7 @@
       document.getElementById('noteDescription').textContent = notes[noteId].description;
     } else {
       document.getElementById('noteTitle').textContent = 'Note not found';
-      document.getElementById('noteDescription').innerHTML = 'The note you are looking for does not exist or has been deleted. <br><br> <a href="notes-app.html" style="color:black">Return home</a>';
+      document.getElementById('noteDescription').textContent = 'The note you are looking for does not exist or has been deleted.';
     }
   </script>
 </body>
