--- a/projects/notes-app.html
+++ b/projects/notes-app.html
@@ -27,6 +27,18 @@
       box-sizing: border-box;
     }
 
+    html {
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+      overflow: hidden;
+    }
+
+    html::-webkit-scrollbar {
+      display: none;
+      width: 0;
+      background: transparent;
+    }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       background-color: var(--bg-body);
@@ -35,6 +47,14 @@
       padding: 40px 20px;
       line-height: 1.5;
       -webkit-font-smoothing: antialiased;
+      overflow-y: auto;
+      height: 100vh;
+    }
+
+    body::-webkit-scrollbar {
+      display: none;
+      width: 0;
+      background: transparent;
     }
 
     .container {
@@ -162,6 +182,9 @@
       color: var(--text-primary);
       text-decoration: none;
       margin-right: 16px;
+      word-wrap: break-word;
+      word-break: break-word;
+      overflow-wrap: break-word;
     }
     
     .note-title-link:hover {
@@ -178,6 +201,9 @@
       line-clamp: 2;
       -webkit-box-orient: vertical;
       margin-bottom: 16px;
+      word-wrap: break-word;
+      word-break: break-word;
+      overflow-wrap: break-word;
     }
 
     .note-actions {
